# project-euler

./: .gitignore  ComplexInteger.hs  Methods.hs  README.org  euler1.hs  euler10.hs  euler11.hs  euler12.hs  euler13.hs  euler14.hs  euler15.hs  euler16.hs  euler17.hs  euler18.hs  euler2.hs  euler3.hs  euler4.hs  euler4.py  euler5.hs  euler6.hs  euler7.hs  euler8.hs  euler8.py  euler9.hs  flake.nix  hie.yaml  methods.py  project-euler.cabal
apl/: euler1.apl
app/: Main.hs
euler1/: solution.hs  solution.py
euler4/: solution.py
problem-1/: solution.hs  solution.py
python/: euler18.py
src/Problems/: P001.hs  P002.hs  P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs
src/Shared/: ComplexInteger.hs  Methods.hs
