cabal-version:      3.0
name:               project-euler
version:            0.1.0.0
synopsis:           Project Euler solutions in Haskell
license:            NONE
author:             User
maintainer:         user@example.com
build-type:         Simple

common common-options
    ghc-options: -Wall
    default-language: Haskell2010
    build-depends:    base >= 4.14 && < 5

library
    import:           common-options
    hs-source-dirs:   src
    exposed-modules:
        Shared.Methods
        Shared.ComplexInteger
        Problems.P001
        Problems.P002
        Problems.P003
        Problems.P004
        Problems.P005
        Problems.P006
        Problems.P007
        Problems.P008
        Problems.P009
        Problems.P010
        Problems.P011
        Problems.P012
        Problems.P013
        Problems.P014
        Problems.P015
        Problems.P016
        Problems.P017
        Problems.P018

executable project-euler
    import:           common-options
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        project-euler
